Replace constructors that are deprecated in java 9